3822B1FI1/6_block_gemm_oneapi/mironov_arseniy/log.txt
/home/crazyproger/sandbox/oneapi-2026/3822B1FI1/6_block_gemm_oneapi/mironov_arseniy/block_gemm_oneapi.cpp:10:26: error: no matching function for call to 'min'
   10 |   const int block_size = std::min(size, 16);
      |                          ^~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/11/../../../../include/c++/11/bits/algorithmfwd.h:420:5: note: candidate template ignored: deduced conflicting types for parameter '_Tp' ('size_t' (aka 'unsigned long') vs. 'int')
  420 |     min(const _Tp&, const _Tp&);
      |     ^
/usr/lib/gcc/x86_64-linux-gnu/11/../../../../include/c++/11/bits/stl_algo.h:3455:5: note: candidate template ignored: could not match 'initializer_list<_Tp>' against 'size_t' (aka 'unsigned long')
 3455 |     min(initializer_list<_Tp> __l, _Compare __comp)
      |     ^
/usr/lib/gcc/x86_64-linux-gnu/11/../../../../include/c++/11/bits/stl_algo.h:3449:5: note: candidate function template not viable: requires single argument '__l', but 2 arguments were provided
 3449 |     min(initializer_list<_Tp> __l)
      |     ^   ~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/11/../../../../include/c++/11/bits/algorithmfwd.h:425:5: note: candidate function template not viable: requires 3 arguments, but 2 were provided
  425 |     min(const _Tp&, const _Tp&, _Compare);
      |     ^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
